--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,1 @@
-# MONGO_URL = mongodb+srv://booking:9yikg5fFbbRF9Tpi@cluster0.fnc9lsv.mongodb.net/?retryWrites=true&w=majority
-MONGO_URL = mongodb+srv://booking:7cQaybD8AvFgLeFG@cluster0.fnc9lsv.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://booking:hp3uJxLdbXJiBY0T@cluster0.fnc9lsv.mongodb.net/?retryWrites=true&w=majority
