--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "server": "nodemon index.js"
+  },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.385.0",
     "bcryptjs": "^2.4.3",
